@@ -2,6 +2,7 @@ package com.innowise.n1jel.handling.service.impl;
 
 import com.innowise.n1jel.handling.entity.TextComponent;
 import com.innowise.n1jel.handling.entity.TextComponentType;
+import com.innowise.n1jel.handling.exception.TextCustomException;
 import com.innowise.n1jel.handling.service.LexemeService;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -12,20 +13,23 @@ public class LexemeServiceImpl implements LexemeService {
     private static final Logger log = LogManager.getLogger(LexemeServiceImpl.class);
 
     @Override
-    public String swapFirstAndLastLexemes(TextComponent root) {
+    public String swapFirstAndLastLexemes(TextComponent root) throws TextCustomException {
         if (root == null) {
-            log.warn("Root is null, returning empty string");
-            return "";
+            throw new TextCustomException("Root cannot be null");
+        }
+
+        if (root.isLeaf()) {
+            throw new TextCustomException("Root is a leaf, cannot swap lexemes");
         }
 
         log.info("Swapping first and last lexemes in each sentence");
         processSentences(root);
 
-        return root.toString();
+        return root.reconstruct();
     }
 
     private void processSentences(TextComponent component) {
-        if (component == null) {
+        if (component == null || component.isLeaf()) {
             return;
         }
 
@@ -47,25 +51,20 @@ public class LexemeServiceImpl implements LexemeService {
             return;
         }
 
-        TextComponent firstLexeme = lexemes.getFirst();
-        TextComponent lastLexeme = lexemes.getLast();
+        int lastIndex = lexemes.size() - 1;
 
-        String firstContent = firstLexeme.toString();
-        String lastContent = lastLexeme.toString();
+        TextComponent firstLexeme = lexemes.get(0);
+        TextComponent lastLexeme = lexemes.get(lastIndex);
 
-        log.debug("Swapping first lexeme '{}' with last lexeme '{}'", firstContent, lastContent);
+        log.debug("Swapping first lexeme '{}' with last lexeme '{}'",
+                firstLexeme.reconstruct(), lastLexeme.reconstruct());
 
-        // Remove and add in swapped order using indices
-        try {
-            // Remove last first (to avoid index shifting issues)
-            lexemes.removeLast();
-            lexemes.removeFirst();
+        // Remove last first (to avoid index shifting)
+        lexemes.remove(lastIndex);
+        lexemes.remove(0);
 
-            // Add them back in swapped order
-            lexemes.addFirst(lastLexeme);
-            lexemes.add(firstLexeme);
-        } catch (Exception e) {
-            log.error("Failed to swap lexemes", e);
-        }
+        // Add them back in swapped order
+        lexemes.add(0, lastLexeme);
+        lexemes.add(firstLexeme);
     }
 }
